Fluent Validation Eklendi

--- a/MvcBlog/Views/Category/Index.cshtml
+++ b/MvcBlog/Views/Category/Index.cshtml
@@ -2,14 +2,14 @@
 @{
     ViewBag.Title = "Index";
 }
-
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
 <table class="table-responsive table-striped">
     <tr>
         <th>1</th>
         <th>2</th>
         <th>3</th>
         <th>4</th>
-        <th>5</th>
+        <th>5</th>  
     </tr>
 </table>
 
