--- a/MvcBlog/Views/AdminCategory/UpdateCategory.cshtml
+++ b/MvcBlog/Views/AdminCategory/UpdateCategory.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Entity.Concrate.Category
 @{
-    ViewBag.Title = "AddCategory";
+    ViewBag.Title = "UpdateCategory";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-@using (Html.BeginForm("AddCategory", "AdminCategory", FormMethod.Post, new { style = "padding-top:20px" }))
+@using (Html.BeginForm("UpdateCategory", "AdminCategory", FormMethod.Post,new {style="padding-top:20px" }))
 {
 
     <div class="form-horizontal">
@@ -27,7 +27,7 @@
 
         <div class="form-group">
             @Html.Label("Kategori Durumu", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-10">                
                 @Html.EditorFor(model => model.CategoryStatüs)
                 @Html.ValidationMessageFor(model => model.CategoryStatüs, "", new { @class = "text-danger" })
 
@@ -37,7 +37,7 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 @Html.ActionLink("Listeye Dön", "CategoryList", null, new { @class = "btn btn-danger" })
-                <button type="submit" class="btn btn-primary">Oluştur</button>
+                <button type="submit" class="btn btn-primary">Kaydet</button>
             </div>
         </div>
     </div>
