Güncelleme hatası çözüldü (geçici)

--- a/MvcBlog/Views/Writer/WriterList.cshtml
+++ b/MvcBlog/Views/Writer/WriterList.cshtml
@@ -54,7 +54,7 @@
                                         <a href="#" class="btn btn-sm bg-teal">
                                             <i class="fas fa-comments"></i>
                                         </a>
-                                        <a href="#" class="btn btn-sm btn-primary">
+                                        <a href="/Writer/UpdateWriter/@item.WriterID" class="btn btn-sm btn-primary">
                                             <i class="fas fa-user"></i> Profili Görüntüle
                                         </a>
                                     </div>
