--- a/MvcBlog/Views/AdminCategory/UpdateCategory.cshtml
+++ b/MvcBlog/Views/AdminCategory/UpdateCategory.cshtml
@@ -10,6 +10,13 @@
     <div class="form-horizontal">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
+            @Html.Label("Kategori ID", new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.TextBoxFor(model => model.CategoryID, null, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.CategoryID, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
             @Html.Label("Kategori Adı", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.TextBoxFor(model => model.CategoryName, null, new { @class = "form-control" })
@@ -20,14 +27,14 @@
         <div class="form-group">
             @Html.Label("Kategori Açıklması", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.CategoryDescription,  new { @class = "form-control" })
+                @Html.TextAreaFor(model => model.CategoryDescription, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.CategoryDescription, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.Label("Kategori Durumu", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">                
+            <div class="col-md-10">
                 @Html.EditorFor(model => model.CategoryStatüs)
                 @Html.ValidationMessageFor(model => model.CategoryStatüs, "", new { @class = "text-danger" })
 
