--- a/MvcBlog/Views/Shared/_AdminLayout.cshtml
+++ b/MvcBlog/Views/Shared/_AdminLayout.cshtml
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>AdminLTE 3 | Dashboard 3</title>
+    <title>@ViewBag.Title</title>
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="~/themes/AdminLTE/plugins/fontawesome-free/css/all.min.css">
     <!-- IonIcons -->
@@ -65,7 +65,7 @@ to get the desired effect
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="pages/widgets.html" class="nav-link">
+                            <a href="/Heading/HeadingList" class="nav-link">
                                 <i class="nav-icon fas fa-th"></i>
                                 <p>
                                     Başlıklar
