--- a/MvcBlog/Views/Heading/HeadingList.cshtml
+++ b/MvcBlog/Views/Heading/HeadingList.cshtml
@@ -5,30 +5,103 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<br />
-<table class="table table-hover table-bordered table-sm">
-    <tr class="bg-primary text-white">
-        <th>Heading ID</th>
-        <th>Heading Name</th>
-        <th>Heading date</th>
-        <th>Kategori Name</th>
-        <th>writer Name</th>
-       
-    </tr>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>@item.HeadingID</td>
-                <td>@item.HeadingName</td>
-                <td>@item.HeadingDate.ToShortDateString()</td>
-                <td>@item.Category.CategoryName</td>
-                <td>@item.Writer.WriterName @item.Writer.WriterSurname</td>
-               
-            </tr>
-        }
-    </tbody>
-</table>
-@Html.ActionLink("Başlık Ekle", "AddHeading", null, new { @class = "btn btn-info" })
+<!-- Main content -->
+<section class="content pt-3">
 
+    <!-- Default box -->
+    <div class="card ">
+        <div class="card-header">
+            <h3 class="card-title font-weight-bold">Başlık İşlemleri</h3>
 
+            <div class="card-tools">
+                <a href="/Heading/AddHeading"><i class="fas fa-pen-alt"></i></a>
+                @*@Html.ActionLink("+", "AddHeading", null, new { @class = "btn btn-success btn-sm" })*@
+                <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
+                    <i class="fas fa-minus"></i>
+                </button>
+                <button type="button" class="btn btn-tool" data-card-widget="remove" data-toggle="tooltip" title="Remove">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+           
+        </div>
+        <div class="card-body p-0">
+            <table class="table table-striped projects">
+                <thead>
+                    <tr>
+
+                        @*<th style="width: 1%">
+                                #
+                            </th>*@
+                        <th style="width: 30%">
+                            Başlık Adı
+                        </th>
+                        <th style="width: 25%">
+                            Başlık Yazarı
+                        </th>
+                        <th>
+                            Başlık Kategorisi
+                        </th>
+                        <th style="width: 8%" class="text-center">
+                            Durum
+                        </th>
+                        <th style="width: 20%" class="text-center">
+                            İşlemler
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            @*<td>
+                                    #
+                                </td>*@
+                            <td>
+
+                                @item.HeadingName
+
+                                <br />
+                                <small>
+                                    Created @item.HeadingDate.ToShortDateString()
+                                </small>
+                            </td>
+                            <td>
+                                <ul class="list-inline">
+                                    <li class="list-inline-item">
+                                        @*@item.Writer.WriterName @item.Writer.WriterSurname*@
+                                        <a href="/Writer/UpdateWriter/@item.WriterID"><img alt="Avatar" class="table-avatar" src="~/themes/AdminLTE/dist/img/avatar.png"></a>
+                                    </li>
+                                </ul>
+                            </td>
+                            <td>
+                                @item.Category.CategoryName
+                            </td>
+                            <td class="project-state">
+                                <span class="badge badge-success">Success</span>
+                            </td>
+                            <td class="project-actions text-right">
+                                <a class="btn btn-primary btn-sm" href="/Content/ContentByHeading/@item.HeadingID">
+                                    <i class="fas fa-folder">
+                                    </i>
+                                </a>
+                                <a class="btn btn-warning btn-sm" href="#">
+                                    <i class="fas fa-pencil-alt">
+                                    </i>
+                                </a>
+                                <a class="btn btn-danger btn-sm" href="#">
+                                    <i class="fas fa-trash">
+                                    </i>
+                                </a>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+        <!-- /.card-body -->
+    </div>
+    <!-- /.card -->
+
+</section>
+<!-- /.content -->
