--- a/MvcBlog/Views/About/AddAbout.cshtml
+++ b/MvcBlog/Views/About/AddAbout.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Entity.Concrate.About
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "AddAbout";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<button class="btn btn-primary" data-toggle="modal" data-target="#Modal1">Hakkımızda Girişi</button>
+@*<button class="btn btn-primary" data-toggle="modal" data-target="#Modal1">Hakkımızda Girişi</button>
 
 <div class="modal" id="Modal1">
     <div class="modal-dialog">
@@ -39,5 +39,5 @@
             }
         </div>
     </div>
-</div>
+</div>*@
 
