--- a/MvcBlog/Views/Shared/_AdminLayout.cshtml
+++ b/MvcBlog/Views/Shared/_AdminLayout.cshtml
@@ -56,7 +56,7 @@ to get the desired effect
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <!-- Add icons to the links using the .nav-icon class
                         with font-awesome or any other icon font library -->
-                        <li class="nav-item has-treeview menu-open">
+                        <li class="nav-item has-treeview">
                             <a href="/AdminCategory/CategoryList" class="nav-link">
                                 <i class="nav-icon fas fa-tachometer-alt"></i>
                                 <p>
@@ -64,7 +64,7 @@ to get the desired effect
                                 </p>
                             </a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item has-treeview">
                             <a href="/Heading/HeadingList" class="nav-link">
                                 <i class="nav-icon fas fa-th"></i>
                                 <p>
@@ -196,7 +196,7 @@ to get the desired effect
     <!-- ./wrapper -->
     <!-- REQUIRED SCRIPTS -->
     <!-- jQuery -->
-    <script src="~/themes/AdminLTE/plugins/jquery/jquery.min.js"></script>
+   @* <script src="~/themes/AdminLTE/plugins/jquery/jquery.min.js"></script>*@
     <!-- Bootstrap -->
     <script src="~/themes/AdminLTE/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- AdminLTE -->
