--- a/MvcBlog/Views/Contact/ContactSideBar.cshtml
+++ b/MvcBlog/Views/Contact/ContactSideBar.cshtml
@@ -10,14 +10,21 @@
     <div class="card-body p-0">
         <ul class="nav nav-pills flex-column">
             <li class="nav-item active">
-                <a href="#" class="nav-link">
+                <a href="/Contact/ContactList" class="nav-link">
+                    <i class="fas fa-mail-bulk"></i> İletişim Mesajlar
+                    <span class="badge bg-primary float-right">@ViewBag.d3</span>
+                </a>
+            </li>
+            <li class="nav-item active">
+                <a href="/Message/Inbox" class="nav-link">
                     <i class="fas fa-inbox"></i> Gelen Mesajlar
-                    <span class="badge bg-primary float-right">12</span>
+                    <span class="badge bg-primary float-right">@ViewBag.d1</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link">
+                <a href="/Message/Sendbox" class="nav-link">
                     <i class="far fa-envelope"></i> Gönderilen Mesajlar
+                    <span class="badge bg-primary float-right">@ViewBag.d2</span>
                 </a>
             </li>
             <li class="nav-item">
