Mesaj sayfası ayarları

--- a/MvcBlog/Views/About/AboutList.cshtml
+++ b/MvcBlog/Views/About/AboutList.cshtml
@@ -4,15 +4,17 @@
     ViewBag.Title = "AboutList";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-@Html.Action("AddAboutPartial","About")
+@Html.Action("AddAboutPartial", "About")
 <table class="table table-hover table-bordered table-sm pt-5">
     <tr class="bg-primary text-white">
         <th>Hakkımızda Açıklama 1</th>
         <th>Hakkımızda Resim 1</th>
         <th>Hakkımızda Açıklama 2</th>
         <th>Hakkımızda Resim 2</th>
+        <th>Durum</th>
         <th>Sil</th>
         <th>Güncelle</th>
+        <th>A/P</th>
     </tr>
     <tbody>
         @foreach (var item in Model)
@@ -22,8 +24,10 @@
                 <td>@item.AboutImage1</td>
                 <td>@item.AboutDetails2</td>
                 <td>@item.AboutImage2</td>
+                <td>@item.isActive</td>
                 <td> @Html.ActionLink("Sil", "DeleteAbout", new { id = item.AboutID }, new { @class = "btn btn-danger btn-sm" })</td>
                 <td> @Html.ActionLink("Güncelle", "UpdateAbout", new { id = item.AboutID }, new { @class = "btn btn-warning btn-sm" })</td>
+                <td> @Html.ActionLink("A/P", "DurumDegis", new { id = item.AboutID }, new { @class = "btn btn-success btn-sm" })</td>
             </tr>
         }
     </tbody>
