--- a/MvcBlog/Views/Message/GetInboxMessageDetails.cshtml
+++ b/MvcBlog/Views/Message/GetInboxMessageDetails.cshtml
@@ -51,8 +51,9 @@
                         <button type="button" class="btn btn-default"><i class="fas fa-reply"></i> Reply</button>
                         <button type="button" class="btn btn-default"><i class="fas fa-share"></i> Forward</button>
                     </div>
-                    <button type="button" class="btn btn-default"><i class="far fa-trash-alt"></i> Delete</button>
-                    <button type="button" class="btn btn-default"><i class="fas fa-print"></i> Print</button>
+                    <button type="button"  class="btn btn-default"><i class="far fa-trash-alt"></i> Delete</button>
+                    @Html.ActionLink("Sil", "DeleteMessage", new { id = Model.MessageID}, new { @class = "btn btn-default " })
+                    <button type="button" class="btn btn-default"><i class="fas fa-check"></i> Okundu</button>
                 </div>
                 <!-- /.card-footer -->
             </div>
