--- a/MvcBlog/Views/Contact/ContactSideBar.cshtml
+++ b/MvcBlog/Views/Contact/ContactSideBar.cshtml
@@ -20,7 +20,7 @@
             }
             <li class="nav-item active">
                 <a href="/Message/Inbox" class="nav-link">
-                    <i class="fas fa-inbox"></i> Gelen Mesajlar
+                    <i class="fas fa-inbox"></i> Okunmamış Gelen Mesajlar @* isRead=false *@
                     <span class="badge bg-primary float-right">@ViewBag.d1</span>
                 </a>
             </li>
@@ -31,18 +31,19 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="/Message/Drafts" class="nav-link">
+                <a href="/Message/DraftMessages" class="nav-link">
                     <i class="far fa-file-alt"></i> Taslaklar
+                    <span class="badge bg-primary float-right">@ViewBag.d4</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a href="#" class="nav-link">
-                    <i class="fas fa-filter"></i> Spam
-                    <span class="badge bg-warning float-right">65</span>
+                    <i class="fas fa-filter"></i> Okunmuş Gelen Mesajlar @* isRead=true *@
+                    <span class="badge bg-warning float-right"></span>
                 </a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link">
+                <a href="/Message/TrashMessageList" class="nav-link">
                     <i class="far fa-trash-alt"></i> Çöp Kutusu
                 </a>
             </li>
