--- a/MvcBlog/Views/Message/NewMessage.cshtml
+++ b/MvcBlog/Views/Message/NewMessage.cshtml
@@ -46,10 +46,10 @@
                             <p class="help-block">Max. 32MB</p>
                         </div>
                         <div class="float-right">
-                            <button type="submit" class="btn btn-default"><i class="fas fa-pencil-alt"></i> Taslak</button>
-                            <button type="submit" class="btn btn-primary"><i class="far fa-envelope"></i> Gönder</button>
+                            <button type="submit" name="menuName" value="draft" class="btn btn-default"><i class="fas fa-pencil-alt"></i> Taslak</button>
+                            <button type="submit" name="menuName"  value="send" class="btn btn-primary"><i class="far fa-envelope"></i> Gönder</button>
                         </div>
-                        <button type="reset" class="btn btn-default"><i class="fas fa-times"></i> İptal</button>
+                        <button type="reset" name="menuName"  value="cancel" class="btn btn-default"><i class="fas fa-times"></i> İptal</button>
                     }
                 </div>
 
