--- a/MvcBlog/Views/Message/ReadInbox.cshtml
+++ b/MvcBlog/Views/Message/ReadInbox.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Entity.Concrate
 @model List<Message>
 @{
-    ViewBag.Title = "Inbox";
+    ViewBag.Title = "ReadInbox";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
@@ -164,4 +164,6 @@
         })
     })
 </script>
+
+
 
