--- a/MvcBlog/Views/Account/Login.cshtml
+++ b/MvcBlog/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Entity.Concrate.Admin
 @{
     Layout = null;
 }
@@ -39,11 +39,13 @@
 
                             <div class="form-group">
                                 <div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-user"></span></div>
-                                <input type="text" class="form-control" name="AdminUserName" placeholder="Username" required>
+                                @Html.TextBoxFor(m => m.AdminUserName, new { @class="form-control"})
+                                @*<input type="text" class="form-control" name="AdminUserName" placeholder="Username" required>*@
                             </div>
                             <div class="form-group">
                                 <div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-lock"></span></div>
-                                <input type="password" class="form-control" name="AdminPassword" placeholder="Password" required>
+                                @Html.TextBoxFor(m => m.AdminPassword, new { @class = "form-control" })
+                                @*<input type="password" class="form-control" name="AdminPassword" placeholder="Password" required>*@
                             </div>
                             <div class="form-group d-md-flex">
                                 <div class="w-100 text-md-right">
@@ -51,7 +53,7 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <button type="submit" class="btn form-control btn-primary rounded submit px-3">Get Started</button>
+                                <button type="submit" class="btn form-control btn-primary rounded submit px-3">Giriş Yap</button>
                             </div>
                         }
 
