--- a/MvcBlog/Views/Contact/ContactSideBar.cshtml
+++ b/MvcBlog/Views/Contact/ContactSideBar.cshtml
@@ -19,7 +19,7 @@
                 </li>
             }
             <li class="nav-item active">
-                <a href="/Message/Inbox" class="nav-link">
+                <a href="/Message/UnReadInbox" class="nav-link">
                     <i class="fas fa-inbox"></i> Okunmamış Gelen Mesajlar @* isRead=false *@
                     <span class="badge bg-primary float-right">@ViewBag.d1</span>
                 </a>
@@ -37,14 +37,15 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link">
+                <a href="/Message/ReadInbox" class="nav-link">
                     <i class="fas fa-filter"></i> Okunmuş Gelen Mesajlar @* isRead=true *@
-                    <span class="badge bg-warning float-right"></span>
+                    <span class="badge bg-primary float-right">@ViewBag.d5</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a href="/Message/TrashMessageList" class="nav-link">
                     <i class="far fa-trash-alt"></i> Çöp Kutusu
+                    <span class="badge bg-primary float-right">@ViewBag.d6</span>
                 </a>
             </li>
         </ul>
