--- a/MvcBlog/Views/WriterPanel/MyHeading.cshtml
+++ b/MvcBlog/Views/WriterPanel/MyHeading.cshtml
@@ -5,6 +5,12 @@
     Layout = "~/Views/Shared/_WriterLayout.cshtml";
 }
 
+@*@{
+    var isActiveValue = "";
+    var isActiveText = "";
+}*@
+
+
 
 <!-- Main content -->
 <section class="content pt-3">
@@ -34,15 +40,17 @@
                         @*<th style="width: 1%">
                                 #
                             </th>*@
-                        <th style="width: 33%">
+                        <th style="width: 30%">
                             Başlık Adı
                         </th>
-
-                        <th style="width: 33%">
+                        <th style="width: 25%">
+                            Başlık Yazarı
+                        </th>
+                        <th>
                             Başlık Kategorisi
                         </th>
 
-                        <th style="width: 33%" class="text-center">
+                        <th style="width: 20%" class="text-center">
                             İşlemler
                         </th>
                     </tr>
@@ -50,19 +58,40 @@
                 <tbody>
                     @foreach (var item in Model)
                     {
+                        //switch (item.isActive)
+                        //{
+                        //    case true:
+                        //        isActiveValue = "badge badge-success";
+                        //        isActiveText = "Aktif";
+                        //        break;
+                        //    case false:
+                        //        isActiveValue = "badge badge-danger";
+                        //        isActiveText = "Pasif";
+                        //        break;
+                        //}
+
 
                         <tr>
-
+                            @*<td>
+                                                            #
+                                </td>*@
                             <td>
 
                                 @item.HeadingName
 
                                 <br />
                                 <small>
-                                    Oluşturma Tarihi: @item.HeadingDate.ToShortDateString()
+                                    Created @item.HeadingDate.ToShortDateString()
                                 </small>
                             </td>
-
+                            <td>
+                                <ul class="list-inline">
+                                    <li class="list-inline-item">
+                                        @*@item.Writer.WriterName @item.Writer.WriterSurname*@
+                                        <a href="/Writer/UpdateWriter/@item.WriterID"><img alt="Avatar" class="table-avatar" src="~/themes/AdminLTE/dist/img/avatar.png"></a>
+                                    </li>
+                                </ul>
+                            </td>
                             <td>
                                 @item.Category.CategoryName
                             </td>
@@ -70,17 +99,21 @@
                             <td class="project-actions text-right">
                                 <a class="btn btn-primary btn-sm" href="/Content/ContentByHeading/@item.HeadingID">
                                     <i class="fas fa-folder">
-                                        Yazılar
                                     </i>
                                 </a>
-                                <a class="btn btn-warning btn-sm" href="/WriterPanel/UpdateHeading/@item.HeadingID">
-                                    <i class="fas fa-pencil-alt">
-                                        Düzenle
-                                    </i>
-                                </a>
-                                <a class="btn btn-danger btn-sm" href="/WriterPanel/DeleteHeading/@item.HeadingID">
+                                @*@Html.ActionLink(" ", "DeleteHeading", new { id = item.HeadingID }, new { @class = "btn btn-warning btn-sm ", @onclick = "return confirm('Silmek İstediğine Emin Misin?')" },new {@class= "fas fa-pencil-alt" })*@
+
+                                @*<a href="@Url.Action("DeleteHeading", "WriterPanel",new {id=item.HeadingID })" onclick="return confirm('Silmek İstediğine Emin Misin?')" class="btn btn-warning btn-sm">
                                     <i class="fas fa-trash">
-                                        Sil
+
+                                    </i>
+                                </a>*@
+                                <a class="btn btn-warning btn-sm"  href="/WriterPanel/UpdateHeading/@item.HeadingID">
+                                    <i class="fas fa-pencil-alt">
+                                    </i>
+                                </a>
+                                <a class="btn btn-danger btn-sm" onclick="return confirm('Silmek İstediğine Emin Misin?')" href="/WriterPanel/DeleteHeading/@item.HeadingID">
+                                    <i class="fas fa-trash">
                                     </i>
                                 </a>
                             </td>
