--- a/MvcBlog/Views/WriterPanel/WriterProfile.cshtml
+++ b/MvcBlog/Views/WriterPanel/WriterProfile.cshtml
@@ -1,8 +1,171 @@
-﻿
+﻿@model Entity.Concrate.Writer
 @{
     ViewBag.Title = "WriterProfile";
     Layout = "~/Views/Shared/_WriterLayout.cshtml";
 }
 
-<h2>WriterProfile</h2>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-3">
 
+            <!-- Profile Image -->
+            <div class="card card-primary card-outline">
+                <div class="card-body box-profile">
+                   
+                    <div class="text-center">
+
+                        @*<img class="profile-user-img img-fluid img-circle" src="~/themes/AdminLTE/dist/img/user1-128x128.jpg" alt="User profile picture" />*@
+                        <img class="profile-user-img img-fluid img-circle" alt="User profile picture"  src="~/themes/AdminLTE/images/2.jpeg" />
+                    </div>
+
+                        <h3 class="profile-username text-center"> @Model.WriterName @Model.WriterSurname</h3>
+
+                      
+
+                        <ul class="list-group list-group-unbordered mb-3">
+                            <li class="list-group-item">
+                                <b>Toplam Başlık Sayısı</b> <a class="float-right" href="/WriterPanel/MyHeading/@Model.WriterID">@ViewBag.headingcount</a>
+                            </li>
+                            <li class="list-group-item">
+                                <b>Toplam Yazı Sayısı</b> <a class="float-right" href="/WriterPanelContent/MyContent/@Model.WriterID"> @ViewBag.contentcount</a>
+                            </li>
+                            @*<li class="list-group-item">
+                    <b>Friends</b> <a class="float-right">13,287</a>
+                </li>*@
+                        </ul>
+              
+
+
+
+                </div>
+                <!-- /.card-body -->
+            </div>
+            <!-- /.card -->
+            <!-- About Me Box -->
+           
+            <!-- /.card -->
+        </div>
+        <!-- /.col -->
+        <div class="col-md-9">
+            <div class="card">
+                @*<div class="card-header p-2">
+                    <ul class="nav nav-pills">
+
+                            <li class="nav-item"><a class="btn btn-danger text-white" href="#settings" data-toggle="tab">Ayar</a></li>
+
+                        </ul>
+                    <button class="btn btn-primary">Settings</button>Profilim
+                </div> /.card-header*@ 
+                <div class="card-body">
+                    <div class="tab-content">
+                        <!-- /.tab-pane -->
+
+                        <div>
+                            @using (Html.BeginForm("WriterProfile", "WriterPanel", FormMethod.Post, new { @class = "form-horizontal" }))
+                            {
+                                @Html.HiddenFor(x=>x.WriterID)
+                                <div class="form-group row">
+                                    @Html.Label("Adı", new { @class = "col-sm-2 col-form-label" })
+                                    @*<label for="inputName" class="col-sm-2 col-form-label">Name</label>*@
+                                    <div class="col-sm-10">
+                                        @Html.TextBoxFor(m => m.WriterName, new { @class = "form-control" })
+                                        @*<input type="email" class="form-control" id="inputName" placeholder="Name">*@
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    @Html.Label("Soyadı", new { @class = "col-sm-2 col-form-label" })
+                                    @*<label for="inputName" class="col-sm-2 col-form-label">Name</label>*@
+                                    <div class="col-sm-10">
+                                        @Html.TextBoxFor(m => m.WriterSurname, new { @class = "form-control" })
+                                        @*<input type="email" class="form-control" id="inputName" placeholder="Name">*@
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    @Html.Label("image", new { @class = "col-sm-2 col-form-label" })
+                                    @*<label for="inputName" class="col-sm-2 col-form-label">Name</label>*@
+                                    <div class="col-sm-10">
+                                        @Html.TextBoxFor(m => m.WriterImage, new { @class = "form-control" })
+                                        @*<input type="email" class="form-control" id="inputName" placeholder="Name">*@
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    @Html.Label("mail", new { @class = "col-sm-2 col-form-label" })
+                                    @*<label for="inputName" class="col-sm-2 col-form-label">Name</label>*@
+                                    <div class="col-sm-10">
+                                        @Html.TextBoxFor(m => m.WriterMail, new { @class = "form-control" })
+                                        @*<input type="email" class="form-control" id="inputName" placeholder="Name">*@
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    @Html.Label("password", new { @class = "col-sm-2 col-form-label" })
+                                    @*<label for="inputName" class="col-sm-2 col-form-label">Name</label>*@
+                                    <div class="col-sm-10">
+                                        @Html.PasswordFor(m => m.WriterPassword, new { @class = "form-control" })
+                                        @*<input type="email" class="form-control" id="inputName" placeholder="Name">*@
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <div class="offset-sm-2 col-sm-10">
+                                        <button type="submit" class="btn btn-success">Submit</button>
+                                    </div>
+                                </div>
+
+                            }
+                            @*<form class="form-horizontal">
+            <div class="form-group row">
+                <label for="inputName" class="col-sm-2 col-form-label">Name</label>
+                <div class="col-sm-10">
+                    <input type="email" class="form-control" id="inputName" placeholder="Name">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
+                <div class="col-sm-10">
+                    <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputName2" class="col-sm-2 col-form-label">Name</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="inputName2" placeholder="Name">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputExperience" class="col-sm-2 col-form-label">Experience</label>
+                <div class="col-sm-10">
+                    <textarea class="form-control" id="inputExperience" placeholder="Experience"></textarea>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputSkills" class="col-sm-2 col-form-label">Skills</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="inputSkills" placeholder="Skills">
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="offset-sm-2 col-sm-10">
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox"> I agree to the <a href="#">terms and conditions</a>
+                        </label>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="offset-sm-2 col-sm-10">
+                    <button type="submit" class="btn btn-danger">Submit</button>
+                </div>
+            </div>
+        </form>*@
+                        </div>
+                        <!-- /.tab-pane -->
+                    </div>
+                    <!-- /.tab-content -->
+                </div><!-- /.card-body -->
+            </div>
+            <!-- /.nav-tabs-custom -->
+        </div>
+        <!-- /.col -->
+    </div>
+    <!-- /.row -->
+</div><!-- /.container-fluid -->
