--- a/MvcBlog/Views/Gallery/Index.cshtml
+++ b/MvcBlog/Views/Gallery/Index.cshtml
@@ -2,48 +2,47 @@
 @model List<ImageFile>
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Views/Shared/_WriterLayout.cshtml";
 }
 
-<!-- Ekko Lightbox -->
-<link rel="stylesheet" href="~/themes/AdminLTE/plugins/ekko-lightbox/ekko-lightbox.css">
 
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-12">
-            <div class="card card-primary">
-                <div class="card-header">
-                    <div class="card-title">
-                       Galeri
+        <div class="card-body"></div>
+        <div class="row">
+            <div class="col-12">
+                <div class="card card-primary">
+                    <div class="card-header">
+                        <div class="card-title">
+                           Galeri
+                        </div>
                     </div>
-                </div>
-                <div class="card-body">
-                    <div class="row">
-                        @foreach (var item in Model)
-                        {
-                            <div class="col-sm-2">
-                                <a href="@item.ImagePath" data-toggle="lightbox" data-title="@item.ImageName" data-gallery="gallery">
-                                    <img src="@item.ImagePath" class="img-fluid mb-2" alt="@item.ImageName" />
-                                </a>
-                            </div>
-                        }
+                    <div class="card-body">
+                        <div class="row">
+                            @foreach (var item in Model)
+                            {
+                                <div class="col-sm-2">
+                                    <a href="@item.ImagePath" data-toggle="lightbox" data-title="@item.ImageName" data-gallery="gallery">
+                                        <img src="@item.ImagePath" class="img-fluid mb-2" alt="@item.ImageName" />
+                                    </a>
+                                </div>
+                            }
 
 
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-<script src="~/themes/AdminLTE/plugins/jquery/jquery.min.js"></script>
+@*<script src="~/themes/AdminLTE/plugins/jquery/jquery.min.js"></script>*@
 
-<!-- jQuery UI -->
-<script src="~/themes/AdminLTE/plugins/jquery-ui/jquery-ui.min.js"></script>
-<!-- Ekko Lightbox -->
+@*jQuery UI*@
+@*<script src="~/themes/AdminLTE/plugins/jquery-ui/jquery-ui.min.js"></script>*@
+@*Ekko Lightbox*@
 <script src="~/themes/AdminLTE/plugins/ekko-lightbox/ekko-lightbox.min.js"></script>
 
-<!-- Filterizr-->
+@*Filterizr*@
 <script src="~/themes/AdminLTE/plugins/filterizr/jquery.filterizr.min.js"></script>
 
 <!-- Page specific script -->
