--- a/MvcBlog/Views/Shared/_AdminLayout.cshtml
+++ b/MvcBlog/Views/Shared/_AdminLayout.cshtml
@@ -34,7 +34,7 @@
 
     <link rel="stylesheet" href="~/themes/AdminLTE/plugins/summernote/summernote-bs4.css">
 
-    
+
     <!-- Google Font: Source Sans Pro -->
 
 
@@ -162,10 +162,10 @@ to get the desired effect
                 </li>
 
                 @*<li class="nav-item">
-                    <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">
-                        <i class="fas fa-th-large"></i>
-                    </a>
-                </li>*@
+                        <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button">
+                            <i class="fas fa-th-large"></i>
+                        </a>
+                    </li>*@
             </ul>
         </nav>
         <!-- /.navbar -->
@@ -192,7 +192,7 @@ to get the desired effect
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <!-- Add icons to the links using the .nav-icon class
-    with font-awesome or any other icon font library -->
+                        with font-awesome or any other icon font library -->
                         @if (User.IsInRole("A"))
                         {
                             <li class="nav-item has-treeview">
@@ -270,9 +270,9 @@ to get the desired effect
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="pages/charts/flot.html" class="nav-link">
+                                        <a href="/Report/WriterReport" class="nav-link">
                                             <i class="far fa-circle nav-icon"></i>
-                                            <p>Grafik 2</p>
+                                            <p>Başlık Raporu</p>
                                         </a>
                                     </li>
                                     <li class="nav-item">
@@ -323,7 +323,7 @@ to get the desired effect
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="pages/calendar.html" class="nav-link">
+                            <a href="/Authorization/AdminList/" class="nav-link">
                                 <i class="nav-icon fas fa-calendar-alt"></i>
                                 <p>
                                     Yetkilendirmeler
