--- a/MvcBlog/Views/Shared/_TestLayout.cshtml
+++ b/MvcBlog/Views/Shared/_TestLayout.cshtml
@@ -202,19 +202,19 @@ to get the desired effect
                                 </a>
                                 <ul class="nav nav-treeview">
                                     <li class="nav-item">
-                                        <a href="/AdminCategory/CategoryList/"  class="nav-link">
+                                        <a href="pages/charts/chartjs.html" class="nav-link">
                                             <i class="far fa-circle nav-icon"></i>
                                             <p>Kategoriler</p>
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="/Heading/HeadingList/" class="nav-link">
+                                        <a href="pages/charts/chartjs.html" class="nav-link">
                                             <i class="far fa-circle nav-icon"></i>
                                             <p>Başlıklar</p>
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="/Writer/WriterList/" class="nav-link">
+                                        <a href="pages/charts/chartjs.html" class="nav-link">
                                             <i class="far fa-circle nav-icon"></i>
                                             <p>Yazarlar</p>
                                         </a>
@@ -232,13 +232,13 @@ to get the desired effect
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="/About/AboutList/" class="nav-link">
+                                        <a href="/About/AboutList" class="nav-link">
                                             <i class="far fa-circle nav-icon"></i>
                                             <p>Hakkımızda</p>
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="/Contact/ContactList/" class="nav-link">
+                                        <a href="/Contact/ContactList" class="nav-link">
                                             <i class="far fa-circle nav-icon"></i>
                                             <p>İletişim</p>
                                         </a>
@@ -256,7 +256,7 @@ to get the desired effect
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="/Gallery/Index/" class="nav-link">
+                                        <a href=/Gallery/Index"/ class="nav-link">
                                             <i class="far fa-circle nav-icon"></i>
                                             <p>Galeri</p>
                                         </a>
@@ -284,19 +284,19 @@ to get the desired effect
                                 </a>
                                 <ul class="nav nav-treeview">
                                     <li class="nav-item">
-                                        <a href="/AdminCategory/CategoryList/" class="nav-link">
+                                        <a href="/AdminCategory/CategoryList" class="nav-link">
                                             <i class="far fa-circle nav-icon"></i>
                                             <p>Kategoriler</p>
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="/Heading/HeadingList/" class="nav-link">
+                                        <a href="/Heading/HeadingList" class="nav-link">
                                             <i class="far fa-circle nav-icon"></i>
                                             <p>Başlıklar</p>
                                         </a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="/Writer/WriterList/" class="nav-link">
+                                        <a href="/Writer/WriterList" class="nav-link">
                                             <i class="far fa-circle nav-icon"></i>
                                             <p>Yazarlar</p>
                                         </a>
